--- a/monitoring/prometheus/alerts/ceph_default_alerts.yml
+++ b/monitoring/prometheus/alerts/ceph_default_alerts.yml
@@ -7,6 +7,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.2.1
         annotations:
           description: >
             Ceph in HEALTH_ERROR state for more than 5 minutes.
@@ -18,6 +19,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.2.2
         annotations:
           description: >
             Ceph has been in HEALTH_WARN for more than 15 minutes.
@@ -30,6 +32,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.3.1
         annotations:
           description: |
             Monitor count in quorum is below three.
@@ -48,6 +51,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.4.1
         annotations:
           description: |
             {{ $value | humanize }}% or {{ with query "count(ceph_osd_up == 0)" }}{{ . | first | value }}{{ end }} of {{ with query "count(ceph_osd_up)" }}{{ . | first | value }}{{ end }} OSDs are down (≥ 10%).
@@ -63,6 +67,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.4.2
         annotations:
           description: |
             {{ $s := "" }}{{ if gt $value 1.0 }}{{ $s = "s" }}{{ end }}
@@ -85,6 +90,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.4.3
         annotations:
           description: >
             OSD {{ $labels.ceph_daemon }} on {{ $labels.hostname }} is
@@ -99,6 +105,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.4.4
         annotations:
           description: >
             OSD {{ $labels.ceph_daemon }} on {{ $labels.hostname }} was
@@ -117,6 +124,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.4.5
         annotations:
           description: >
             OSD {{ $labels.ceph_daemon }} on {{ $labels.hostname }} deviates
@@ -136,6 +144,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.7.1
         annotations:
           description: >
             {{ $value }} PGs have been inactive for more than 5 minutes in pool {{ $labels.name }}.
@@ -147,6 +156,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.7.2
         annotations:
           description: >
             {{ $value }} PGs haven't been clean for more than 15 minutes in pool {{ $labels.name }}.
@@ -160,6 +170,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.8.1
         annotations:
           description: >
             Root volume (OSD and MON store) is dangerously full: {{ $value | humanize }}% free.
@@ -170,6 +181,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.8.2
         annotations:
           description: >
             Node {{ $labels.instance }} experiences packet drop > 1
@@ -182,6 +194,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.8.3
         annotations:
           description: >
             Node {{ $labels.instance }} experiences packet errors > 1
@@ -194,6 +207,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.8.4
         annotations:
           description: >
             Mountpoint {{ $labels.mountpoint }} on {{ $labels.nodename }}
@@ -209,6 +223,7 @@ groups:
         labels:
           severity: critical
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.9.1
         annotations:
           description: Pool {{ $labels.name }} at {{ $value | humanize }}% capacity.
 
@@ -221,6 +236,7 @@ groups:
         labels:
           severity: warning
           type: ceph_default
+          oid: 1.3.6.1.4.1.50495.15.1.2.9.2
         annotations:
           description: >
             Pool {{ $labels.name }} will be full in less than 5 days
