Drive_group yaml
Signed-off-by: Georgios Kyratsas <gkyratsas@suse.com>

--- a/qa/ceph_salt/ceph_salt.yaml
+++ b/qa/ceph_salt/ceph_salt.yaml
@@ -2,4 +2,5 @@ tasks:
         - ceph_salt:
                 repo: https://github.com/suse/ceph-salt.git
                 branch: master
+                drive_group: default
 
