qa/suites/ceph_salt: Adding cephadm task
Adding cephadm task after ceph_salt task to deploy the rest of the
cluster

Plus patching ceph_salt.py to be compatible with cephadm.py

Signed-off-by: Georgios Kyratsas <gkyratsas@suse.com>

--- a/qa/ceph_salt/ceph_salt.yaml
+++ b/qa/ceph_salt/ceph_salt.yaml
@@ -3,4 +3,15 @@ tasks:
                 repo: https://github.com/suse/ceph-salt.git
                 branch: master
                 drive_group: default
+        - cephadm:
+               conf:
+                 mgr:
+                   debug ms: 1
+                   debug mgr: 20
+overrides:
+  ceph:
+    conf:
+      osd:
+        osd shutdown pgref assert: true
+
 
