suites/deepsea/tier4/upgrade:power-of-2 pg_num fix
Since pg_num being power of 2 is not a requirement for luminous but it
is on nautilus, disabling this warning on global.conf in order to fix
the test that fails to get HEALTH-OK status after upgrade.

Signed-off-by: Georgios Kyratsas <gkyratsas@suse.com>

--- a/qa/suites/deepsea/tier4/upgrade/1-deploy-phase.yaml
+++ b/qa/suites/deepsea/tier4/upgrade/1-deploy-phase.yaml
@@ -11,5 +11,6 @@ tasks:
         - deepsea.ceph_conf:
                 global:
                         bluestore warn on legacy statfs: false
+                        mon_warn_on_pool_pg_num_not_power_of_two: false
         - deepsea.orch:
                 stage: 3
